besser/BUML/notations/nn/NNParser.py
# Generated from ./NN.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class NNParser ( Parser ):

    grammarFileName = "NN.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'layers'", "'sub_nn'", "'tensor_ops'",
                     "'modules'", "'config'", "'batch_size'", "'='", "'epochs'",
                     "'learning_rate'", "'optimiser'", "'metrics'", "'loss_function'",
                     "'weight_decay'", "'momentum'", "'-'", "'actv_func'",
                     "'name_layer_input'", "'input_reused'", "'type'", "'Linear'",
                     "'in_features'", "'out_features'", "'Flatten'", "'start_dim'",
                     "'end_dim'", "'Embedding'", "'num_embeddings'", "'embedding_dim'",
                     "'SimpleRNN'", "'LSTM'", "'GRU'", "'return_type'",
                     "'input_size'", "'hidden_size'", "'bidirectional'",
                     "'dropout'", "'batch_first'", "'kernel_dim'", "'stride_dim'",
                     "'padding_type'", "'padding_amount'", "'Conv1D'", "'Conv2D'",
                     "'Conv3D'", "'in_channels'", "'out_channels'", "'Pooling'",
                     "'pooling_type'", "'dimension'", "'output_dim'", "'Dropout'",
                     "'rate'", "'crossentropy'", "'binary_crossentropy'",
                     "'mse'", "'TrainingDataset'", "'name'", "'path_data'",
                     "'task_type'", "'input_format'", "'image'", "'labels'",
                     "'{'", "','", "'}'", "'TestDataset'", "'('", "'col'",
                     "'label'", "')'", "'concatenate_dim'", "'layers_of_tensors'",
                     "'reshape_dim'", "'transpose_dim'", "'permute_dim'",
                     "'after_activ_func'", "'['", "']'", "'relu'", "'leaky_relu'",
                     "'sigmoid'", "'softmax'", "'tanh'", "'None'", "'last'",
                     "'full'", "'hidden'", "'reshape'", "'concatenate'",
                     "'multiply'", "'matmultiply'", "'permute'", "'transpose'",
                     "'binary'", "'multi_class'", "'regression'", "'csv'",
                     "'images'", "'valid'", "'same'", "'average'", "'max'",
                     "'adaptive_average'", "'adaptive_max'", "'1D'", "'2D'",
                     "'3D'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "BOOL", "ID", "INT", "WS", "STRING",
                      "DOUBLE" ]

    RULE_neuralNetwork = 0
    RULE_parameters = 1
    RULE_layer = 2
    RULE_layerParams = 3
    RULE_generalLayer = 4
    RULE_linear = 5
    RULE_flatten = 6
    RULE_embedding = 7
    RULE_rnn = 8
    RULE_cnn = 9
    RULE_cnnParams = 10
    RULE_convolutional = 11
    RULE_pooling = 12
    RULE_layerModifier = 13
    RULE_dropout = 14
    RULE_normalisation = 15
    RULE_lossFunction = 16
    RULE_sub_nn = 17
    RULE_trainingDataset = 18
    RULE_testDataset = 19
    RULE_label = 20
    RULE_tensorOp = 21
    RULE_modules = 22
    RULE_intList = 23
    RULE_strList = 24
    RULE_intStrList = 25
    RULE_activityFuncType = 26
    RULE_returnTypeRRN = 27
    RULE_tensorOpType = 28
    RULE_taskType = 29
    RULE_inputFormat = 30
    RULE_paddingType = 31
    RULE_poolingType = 32
    RULE_dimensionality = 33

    ruleNames =  [ "neuralNetwork", "parameters", "layer", "layerParams",
                   "generalLayer", "linear", "flatten", "embedding", "rnn",
                   "cnn", "cnnParams", "convolutional", "pooling", "layerModifier",
                   "dropout", "normalisation", "lossFunction", "sub_nn",
                   "trainingDataset", "testDataset", "label", "tensorOp",
                   "modules", "intList", "strList", "intStrList", "activityFuncType",
                   "returnTypeRRN", "tensorOpType", "taskType", "inputFormat",
                   "paddingType", "poolingType", "dimensionality" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    T__103=104
    T__104=105
    T__105=106
    T__106=107
    T__107=108
    BOOL=109
    ID=110
    INT=111
    WS=112
    STRING=113
    DOUBLE=114

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class NeuralNetworkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NNParser.ID, 0)

        def modules(self):
            return self.getTypedRuleContext(NNParser.ModulesContext,0)


        def layer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNParser.LayerContext)
            else:
                return self.getTypedRuleContext(NNParser.LayerContext,i)


        def parameters(self):
            return self.getTypedRuleContext(NNParser.ParametersContext,0)


        def trainingDataset(self):
            return self.getTypedRuleContext(NNParser.TrainingDatasetContext,0)


        def testDataset(self):
            return self.getTypedRuleContext(NNParser.TestDatasetContext,0)


        def sub_nn(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNParser.Sub_nnContext)
            else:
                return self.getTypedRuleContext(NNParser.Sub_nnContext,i)


        def tensorOp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNParser.TensorOpContext)
            else:
                return self.getTypedRuleContext(NNParser.TensorOpContext,i)


        def getRuleIndex(self):
            return NNParser.RULE_neuralNetwork

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNeuralNetwork" ):
                listener.enterNeuralNetwork(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNeuralNetwork" ):
                listener.exitNeuralNetwork(self)




    def neuralNetwork(self):

        localctx = NNParser.NeuralNetworkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_neuralNetwork)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(NNParser.ID)
            self.state = 69
            self.match(NNParser.T__0)
            self.state = 70
            self.match(NNParser.T__1)
            self.state = 71
            self.match(NNParser.T__0)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self.layer()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==16):
                    break

            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 77
                self.match(NNParser.T__2)
                self.state = 78
                self.match(NNParser.T__0)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 79
                    self.sub_nn()
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==16):
                        break

                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 89
                self.match(NNParser.T__3)
                self.state = 90
                self.match(NNParser.T__0)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 91
                    self.tensorOp()
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==16):
                        break

                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(NNParser.T__4)
            self.state = 102
            self.match(NNParser.T__0)
            self.state = 103
            self.modules()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 104
                self.match(NNParser.T__5)
                self.state = 105
                self.match(NNParser.T__0)
                self.state = 106
                self.parameters()


            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==57:
                self.state = 109
                self.trainingDataset()


            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==67:
                self.state = 112
                self.testDataset()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(NNParser.INT)
            else:
                return self.getToken(NNParser.INT, i)

        def DOUBLE(self, i:int=None):
            if i is None:
                return self.getTokens(NNParser.DOUBLE)
            else:
                return self.getToken(NNParser.DOUBLE, i)

        def STRING(self):
            return self.getToken(NNParser.STRING, 0)

        def strList(self):
            return self.getTypedRuleContext(NNParser.StrListContext,0)


        def lossFunction(self):
            return self.getTypedRuleContext(NNParser.LossFunctionContext,0)


        def getRuleIndex(self):
            return NNParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = NNParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_parameters)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(NNParser.T__6)
            self.state = 116
            self.match(NNParser.T__7)
            self.state = 117
            self.match(NNParser.INT)
            self.state = 118
            self.match(NNParser.T__8)
            self.state = 119
            self.match(NNParser.T__7)
            self.state = 120
            self.match(NNParser.INT)
            self.state = 121
            self.match(NNParser.T__9)
            self.state = 122
            self.match(NNParser.T__7)
            self.state = 123
            self.match(NNParser.DOUBLE)
            self.state = 124
            self.match(NNParser.T__10)
            self.state = 125
            self.match(NNParser.T__7)
            self.state = 126
            self.match(NNParser.STRING)
            self.state = 127
            self.match(NNParser.T__11)
            self.state = 128
            self.match(NNParser.T__7)
            self.state = 129
            self.strList()
            self.state = 130
            self.match(NNParser.T__12)
            self.state = 131
            self.match(NNParser.T__7)
            self.state = 132
            self.lossFunction()
            self.state = 133
            self.match(NNParser.T__13)
            self.state = 134
            self.match(NNParser.T__7)
            self.state = 135
            self.match(NNParser.DOUBLE)
            self.state = 136
            self.match(NNParser.T__14)
            self.state = 137
            self.match(NNParser.T__7)
            self.state = 138
            self.match(NNParser.DOUBLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NNParser.ID, 0)

        def generalLayer(self):
            return self.getTypedRuleContext(NNParser.GeneralLayerContext,0)


        def rnn(self):
            return self.getTypedRuleContext(NNParser.RnnContext,0)


        def cnn(self):
            return self.getTypedRuleContext(NNParser.CnnContext,0)


        def layerModifier(self):
            return self.getTypedRuleContext(NNParser.LayerModifierContext,0)


        def getRuleIndex(self):
            return NNParser.RULE_layer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayer" ):
                listener.enterLayer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayer" ):
                listener.exitLayer(self)




    def layer(self):

        localctx = NNParser.LayerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_layer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(NNParser.T__15)
            self.state = 141
            self.match(NNParser.ID)
            self.state = 142
            self.match(NNParser.T__0)
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 143
                self.generalLayer()
                pass

            elif la_ == 2:
                self.state = 144
                self.rnn()
                pass

            elif la_ == 3:
                self.state = 145
                self.cnn()
                pass

            elif la_ == 4:
                self.state = 146
                self.layerModifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayerParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def activityFuncType(self):
            return self.getTypedRuleContext(NNParser.ActivityFuncTypeContext,0)


        def STRING(self):
            return self.getToken(NNParser.STRING, 0)

        def BOOL(self):
            return self.getToken(NNParser.BOOL, 0)

        def getRuleIndex(self):
            return NNParser.RULE_layerParams

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayerParams" ):
                listener.enterLayerParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayerParams" ):
                listener.exitLayerParams(self)




    def layerParams(self):

        localctx = NNParser.LayerParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_layerParams)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 149
                self.match(NNParser.T__16)
                self.state = 150
                self.match(NNParser.T__7)
                self.state = 151
                self.activityFuncType()


            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 154
                self.match(NNParser.T__17)
                self.state = 155
                self.match(NNParser.T__7)
                self.state = 156
                self.match(NNParser.STRING)


            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 159
                self.match(NNParser.T__18)
                self.state = 160
                self.match(NNParser.T__7)
                self.state = 161
                self.match(NNParser.BOOL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GeneralLayerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def linear(self):
            return self.getTypedRuleContext(NNParser.LinearContext,0)


        def flatten(self):
            return self.getTypedRuleContext(NNParser.FlattenContext,0)


        def embedding(self):
            return self.getTypedRuleContext(NNParser.EmbeddingContext,0)


        def getRuleIndex(self):
            return NNParser.RULE_generalLayer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGeneralLayer" ):
                listener.enterGeneralLayer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGeneralLayer" ):
                listener.exitGeneralLayer(self)




    def generalLayer(self):

        localctx = NNParser.GeneralLayerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_generalLayer)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.linear()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.flatten()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.embedding()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinearContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def layerParams(self):
            return self.getTypedRuleContext(NNParser.LayerParamsContext,0)


        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(NNParser.INT)
            else:
                return self.getToken(NNParser.INT, i)

        def getRuleIndex(self):
            return NNParser.RULE_linear

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinear" ):
                listener.enterLinear(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinear" ):
                listener.exitLinear(self)




    def linear(self):

        localctx = NNParser.LinearContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_linear)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(NNParser.T__19)
            self.state = 170
            self.match(NNParser.T__7)
            self.state = 171
            self.match(NNParser.T__20)
            self.state = 172
            self.layerParams()
            self.state = 173
            self.match(NNParser.T__21)
            self.state = 174
            self.match(NNParser.T__7)
            self.state = 175
            self.match(NNParser.INT)
            self.state = 176
            self.match(NNParser.T__22)
            self.state = 177
            self.match(NNParser.T__7)
            self.state = 178
            self.match(NNParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FlattenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def layerParams(self):
            return self.getTypedRuleContext(NNParser.LayerParamsContext,0)


        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(NNParser.INT)
            else:
                return self.getToken(NNParser.INT, i)

        def getRuleIndex(self):
            return NNParser.RULE_flatten

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlatten" ):
                listener.enterFlatten(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlatten" ):
                listener.exitFlatten(self)




    def flatten(self):

        localctx = NNParser.FlattenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_flatten)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(NNParser.T__19)
            self.state = 181
            self.match(NNParser.T__7)
            self.state = 182
            self.match(NNParser.T__23)
            self.state = 183
            self.layerParams()
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 184
                self.match(NNParser.T__24)
                self.state = 185
                self.match(NNParser.T__7)
                self.state = 186
                self.match(NNParser.INT)


            self.state = 192
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 189
                self.match(NNParser.T__25)
                self.state = 190
                self.match(NNParser.T__7)
                self.state = 191
                self.match(NNParser.INT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmbeddingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def layerParams(self):
            return self.getTypedRuleContext(NNParser.LayerParamsContext,0)


        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(NNParser.INT)
            else:
                return self.getToken(NNParser.INT, i)

        def getRuleIndex(self):
            return NNParser.RULE_embedding

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmbedding" ):
                listener.enterEmbedding(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmbedding" ):
                listener.exitEmbedding(self)




    def embedding(self):

        localctx = NNParser.EmbeddingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_embedding)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.match(NNParser.T__19)
            self.state = 195
            self.match(NNParser.T__7)
            self.state = 196
            self.match(NNParser.T__26)
            self.state = 197
            self.layerParams()
            self.state = 198
            self.match(NNParser.T__27)
            self.state = 199
            self.match(NNParser.T__7)
            self.state = 200
            self.match(NNParser.INT)
            self.state = 201
            self.match(NNParser.T__28)
            self.state = 202
            self.match(NNParser.T__7)
            self.state = 203
            self.match(NNParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RnnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.rnn_type = None # Token
            self.i_size = None # Token
            self.bid = None # Token
            self.dout = None # Token
            self.b_first = None # Token

        def layerParams(self):
            return self.getTypedRuleContext(NNParser.LayerParamsContext,0)


        def returnTypeRRN(self):
            return self.getTypedRuleContext(NNParser.ReturnTypeRRNContext,0)


        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(NNParser.INT)
            else:
                return self.getToken(NNParser.INT, i)

        def BOOL(self, i:int=None):
            if i is None:
                return self.getTokens(NNParser.BOOL)
            else:
                return self.getToken(NNParser.BOOL, i)

        def DOUBLE(self):
            return self.getToken(NNParser.DOUBLE, 0)

        def getRuleIndex(self):
            return NNParser.RULE_rnn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRnn" ):
                listener.enterRnn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRnn" ):
                listener.exitRnn(self)




    def rnn(self):

        localctx = NNParser.RnnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_rnn)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 205
            self.match(NNParser.T__19)
            self.state = 206
            self.match(NNParser.T__7)
            self.state = 207
            localctx.rnn_type = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7516192768) != 0)):
                localctx.rnn_type = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 208
            self.layerParams()
            self.state = 209
            self.match(NNParser.T__32)
            self.state = 210
            self.match(NNParser.T__7)
            self.state = 211
            self.returnTypeRRN()
            self.state = 215
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 212
                self.match(NNParser.T__33)
                self.state = 213
                self.match(NNParser.T__7)
                self.state = 214
                localctx.i_size = self.match(NNParser.INT)


            self.state = 217
            self.match(NNParser.T__34)
            self.state = 218
            self.match(NNParser.T__7)
            self.state = 219
            self.match(NNParser.INT)
            self.state = 223
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 220
                self.match(NNParser.T__35)
                self.state = 221
                self.match(NNParser.T__7)
                self.state = 222
                localctx.bid = self.match(NNParser.BOOL)

